# sqlalchemy-pglogical

./: .env  .gitignore  LICENSE.md  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: unit-test.yml  workflow.yml
docs/: development.md
integration/: .env  README.md  docker-compose.yml  test.sh
integration/app/: Dockerfile  entrypoint.sh
integration/app/example-app/: README.md  noxfile.py  pyproject.toml
integration/app/example-app/example_app/: db.py  models.py
integration/app/example-app/tests/: conftest.py  test_create_tables.py
integration/pg/: Dockerfile  README.md  postgresql.conf
integration/pg/scripts/: create_publication.sh  create_subscription.sh
pg/: Dockerfile  postgresql.conf
sqlalchemy_pglogical/: __init__.py  base.py  replicate_alembic.py  replicate_ddl.py
tests/: test_ddl.py
tests/integration/: alembic.ini  conftest.py  test_alembic_migrations.py  test_create_tables.py
tests/integration/alembic/: env.py
tests/integration/alembic/versions/: 2a9b320f3470_create_unique_constraint.py  4b361a7c7bf3_add_column.py  5907ff9d291e_create_primary_key.py  b67a71ccf11e_initial_revision.py  c3d4de521f9a_add_index.py
tests/unit/: test_alembic.py  test_ddl.py
