[tool.poetry]
name = "sqlalchemy-pglogical"
version = "0.1.0"
description = ""
authors = ["Ben Berry <benjamin.berry@smartsheet.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_pglogical"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"
sqlalchemy = "^1.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
