[tool.poetry]
name = "sqlalchemy-pglogical"
version = "0.1.0"
description = ""
authors = ["Ben Berry <benjamin.berry@smartsheet.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_pglogical"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
sqlalchemy = ">=1.4,<=2"
alembic = "^1.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'