[tool.poetry]
name = "sqlalchemy-pglogical"
version = "0.1.0"
description = ""
authors = ["Ben Berry <benjamin.berry@smartsheet.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_pglogical"}]
license = "MIT"

homepage = "https://github.com/brandfolder/sqlalchemy-pglogical"
documentation = "https://github.com/brandfolder/sqlalchemy-pglogical/blob/main/README.md"
repository = "https://github.com/brandfolder/sqlalchemy-pglogical"

keywords = ["pglogical", "postgres", "sqlalchemy", "alembic"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Database :: Front-Ends"
]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brandfolder/sqlalchemy-pglogical/issues"
changelog = "https://github.com/brandfolder/sqlalchemy-pglogical/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
sqlalchemy = ">=1.4,<=2"
alembic = "^1.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

