[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Ben Berry <benjamin.berry@smartsheet.com>"]
readme = "README.md"
packages = [{include = "example_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sqlalchemy = "^1.4"
psycopg2 = "^2.9.7"
alembic = "^1.11.3"
sqlalchemy_pglogical = { path = "../../../", develop = true }


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
